[gd_scene load_steps=6 format=3 uid="uid://cv40y7ekts2ll"]

[ext_resource type="Script" uid="uid://et0h0j8dd4ih" path="res://UI/store_gui.gd" id="1_holoq"]
[ext_resource type="PackedScene" uid="uid://djnyqox371l1s" path="res://UI/display_row_container.tscn" id="2_nxsl6"]
[ext_resource type="Resource" uid="uid://b0vbx0xus6sb3" path="res://Weapons/WeaponData/hammer.tres" id="3_nxsl6"]
[ext_resource type="Resource" uid="uid://dbxtv4hoosdti" path="res://Weapons/WeaponData/infinity.tres" id="4_lxydt"]
[ext_resource type="LabelSettings" uid="uid://37qhiso1yc2o" path="res://UI/Style/BigLabel.tres" id="7_rb8l3"]

[node name="StoreGUI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_holoq")

[node name="ItemDisplays" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.5
offset_top = -215.0
offset_right = 213.5
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Bro stop"

[node name="DisplayRowContainer" parent="ItemDisplays" instance=ExtResource("2_nxsl6")]
layout_mode = 2
item = ExtResource("3_nxsl6")

[node name="DisplayRowContainer2" parent="ItemDisplays" instance=ExtResource("2_nxsl6")]
layout_mode = 2
item = ExtResource("4_lxydt")

[node name="SoldOutLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Sold out"
label_settings = ExtResource("7_rb8l3")
